INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES =  libreports.a
libreports_a_SOURCES = textreport.cpp textreport.h textinvoice.cpp \
		textinvoice.h textcheck.cpp textcheck.h summaryreport.cpp summaryreport.h \
		discrepancyreport.cpp discrepancyreport.h buyerrecap.cpp buyerrecap.h customerreport.cpp \
		customerreport.h transactionlist.cpp transactionlist.h marketreport.cpp marketreport.h \
		tagreport.cpp tagreport.h checkreport.cpp checkreport.h penreport.cpp penreport.h \
		buyerar.cpp buyerar.h buyercheckreport.cpp buyercheckreport.h \
		truckercheckreport.cpp truckercheckreport.h buyercommissionreport.cpp buyercommissionreport.h \
		truckingreport.cpp truckingreport.h detailsummaryreport.cpp detailsummaryreport.h \
		transactionticket.cpp transactionticket.h mailinglabels.h mailinglablels.cpp codereport.cpp \
		codereport.h historyreport.cpp historyreport.h buyercount.cpp buyercount.h \
	minnesotavetcertificate.cpp minnesotavetcertificate.h tuberculosisrecord.cpp tuberculosisrecord.h \
	allflexreport.cpp allflexreport.h brucellosistestrecord.cpp brucellosistestrecord.h \
	southdakotahealthcertificate.cpp southdakotahealthcertificate.h checkinreport.cpp


libreports_a_LIBADD = $(top_builddir)/src/types/libtypes.a

noinst_HEADERS = checkinreport.h
