INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES =  libtypes.a
libtypes_a_SOURCES = address.cpp address.h animalcode.cpp animalcode.h 	chargerecord.cpp chargerecord.h check.h commission.cpp commission.h contactlist.cpp 	contactlist.h customer.cpp customer.h date.cpp date.h dbug.h invoice.cpp invoice.h 	name.cpp name.h person.cpp person.h transaction.cpp transaction.h 	expressionparser.cpp charge.cpp charge.h check.cpp truckingrecord.cpp truckingrecord.h 	prorate.cpp prorate.h checkfactory.cpp checkfactory.h tag.cpp tag.h numbers.cpp 	numbers.h summaryrecord.cpp summaryrecord.h timeclass.cpp timeclass.h 	datetime.cpp datetime.h radiotag.cpp radiotag.h brand.cpp brand.h historyitem.cpp 	historyitem.h healthrecord.cpp healthrecord.h

noinst_HEADERS = address.cpp address.h animalcode.cpp animalcode.h charge.cpp 	charge.h chargerecord.cpp chargerecord.h check.h commission.cpp commission.h 	contactlist.cpp contactlist.h customer.cpp customer.h date.cpp date.h dbug.h 	expressionparser.cpp expressionparser.h invoice.cpp invoice.h name.cpp name.h person.cpp 	person.h transaction.cpp transaction.h summaryrecord.cpp summaryrecord.h


